--- a/public/css/home.css
+++ b/public/css/home.css
@@ -6,6 +6,31 @@ body{
     padding: 0;
     border: 0;
 }
+
+.navbar {
+    background-color: #333;
+    overflow: hidden;
+}
+#barTitle{
+    font-size: 30px;
+}
+.navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 25px;
+    text-decoration: none;
+}
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+#barTitle:hover {
+    background-color: transparent;
+    color: inherit;
+}
+
 #title{   
     text-align: center;
     font-size: 40px;
@@ -83,6 +108,10 @@ body{
     display: flex;
     border-top: 1px solid rgb(170,170,170);
 }
+.custom-row-item{
+    display: flex;
+    border-top: 1px solid rgb(170,170,170);
+}
 .custom-cell {
     padding: 10px;
     flex: 1;
@@ -98,7 +127,6 @@ body{
     font-size: 25px;
     border: none;
     border-radius: 3px;
-    /* transition: background-color 0.2s ease; */
 }
 .custom-button:hover {
     background-color: rgb(255, 251, 0);
